--- a/Trump_bot.ipynb
+++ b/Trump_bot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twitter_keys={'consumer_key':'7LL0H8bWHMTSrjwh008sfq0ih',\n",
+    "              'consumer_secret':'Ay9JhBnpfY2f9KArHXGPpMXApJJzgfoYx22JcHcREyoHRPWPc3',\n",
+    "             'access_token':'913811643112361984-u3hzrVI87EfVfZavO93beNFDV8EweTB',\n",
+    "              'access_secret':'wg4IjmOrNp8qFjoUBhbaaVBgBaWDznssHs4fYOaKXdXkg'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.dump(twitter_keys,open('tk.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,9 +105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-9-bdde08e767c3>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-bdde08e767c3>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def retweet_filter(tweet):\n",
     "    "
@@ -94,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,16 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'If we can do much better as a National Enquirer article .'"
+       "'Milita Just landed in Paris , France with FLOTUS Melania !'"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,68 +263,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ". ('We', 'pledge')\n",
-      "['We', 'pledge', 'our', 'solidarity']\n",
-      "pledge ('our', 'solidarity')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France']\n",
-      "solidarity ('with', 'France')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror']\n",
-      "France ('against', 'terror')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It']\n",
-      "terror ('.', 'It')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a']\n",
-      "It ('was', 'a')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor']\n",
-      "a ('great', 'honor')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor', 'to', 'welcome']\n",
-      "honor ('to', 'welcome')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor', 'to', 'welcome', 'Prime', 'Minister']\n",
-      "welcome ('Prime', 'Minister')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor', 'to', 'welcome', 'Prime', 'Minister', 'Najib', 'Abdul']\n",
-      "Minister ('Najib', 'Abdul')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor', 'to', 'welcome', 'Prime', 'Minister', 'Najib', 'Abdul', 'Razak', 'of']\n",
-      "Abdul ('Razak', 'of')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor', 'to', 'welcome', 'Prime', 'Minister', 'Najib', 'Abdul', 'Razak', 'of', 'Malaysia', 'and']\n",
-      "of ('Malaysia', 'and')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor', 'to', 'welcome', 'Prime', 'Minister', 'Najib', 'Abdul', 'Razak', 'of', 'Malaysia', 'and', 'his', 'distinguished']\n",
-      "and ('his', 'distinguished')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor', 'to', 'welcome', 'Prime', 'Minister', 'Najib', 'Abdul', 'Razak', 'of', 'Malaysia', 'and', 'his', 'distinguished', 'delegation', 'to']\n",
-      "distinguished ('delegation', 'to')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor', 'to', 'welcome', 'Prime', 'Minister', 'Najib', 'Abdul', 'Razak', 'of', 'Malaysia', 'and', 'his', 'distinguished', 'delegation', 'to', 'th', 'Congratulations']\n",
-      "to ('th', 'Congratulations')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor', 'to', 'welcome', 'Prime', 'Minister', 'Najib', 'Abdul', 'Razak', 'of', 'Malaysia', 'and', 'his', 'distinguished', 'delegation', 'to', 'th', 'Congratulations', 'to', 'Eric']\n",
-      "Congratulations ('to', 'Eric')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor', 'to', 'welcome', 'Prime', 'Minister', 'Najib', 'Abdul', 'Razak', 'of', 'Malaysia', 'and', 'his', 'distinguished', 'delegation', 'to', 'th', 'Congratulations', 'to', 'Eric', 'amp', ';']\n",
-      "Eric ('amp', ';')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor', 'to', 'welcome', 'Prime', 'Minister', 'Najib', 'Abdul', 'Razak', 'of', 'Malaysia', 'and', 'his', 'distinguished', 'delegation', 'to', 'th', 'Congratulations', 'to', 'Eric', 'amp', ';', 'Lara', 'on']\n",
-      "; ('Lara', 'on')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor', 'to', 'welcome', 'Prime', 'Minister', 'Najib', 'Abdul', 'Razak', 'of', 'Malaysia', 'and', 'his', 'distinguished', 'delegation', 'to', 'th', 'Congratulations', 'to', 'Eric', 'amp', ';', 'Lara', 'on', 'the', 'birth']\n",
-      "on ('the', 'birth')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor', 'to', 'welcome', 'Prime', 'Minister', 'Najib', 'Abdul', 'Razak', 'of', 'Malaysia', 'and', 'his', 'distinguished', 'delegation', 'to', 'th', 'Congratulations', 'to', 'Eric', 'amp', ';', 'Lara', 'on', 'the', 'birth', 'of', 'their']\n",
-      "birth ('of', 'their')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor', 'to', 'welcome', 'Prime', 'Minister', 'Najib', 'Abdul', 'Razak', 'of', 'Malaysia', 'and', 'his', 'distinguished', 'delegation', 'to', 'th', 'Congratulations', 'to', 'Eric', 'amp', ';', 'Lara', 'on', 'the', 'birth', 'of', 'their', 'son', ',']\n",
-      "their ('son', ',')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor', 'to', 'welcome', 'Prime', 'Minister', 'Najib', 'Abdul', 'Razak', 'of', 'Malaysia', 'and', 'his', 'distinguished', 'delegation', 'to', 'th', 'Congratulations', 'to', 'Eric', 'amp', ';', 'Lara', 'on', 'the', 'birth', 'of', 'their', 'son', ',', 'Eric', 'Luke']\n",
-      ", ('Eric', 'Luke')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor', 'to', 'welcome', 'Prime', 'Minister', 'Najib', 'Abdul', 'Razak', 'of', 'Malaysia', 'and', 'his', 'distinguished', 'delegation', 'to', 'th', 'Congratulations', 'to', 'Eric', 'amp', ';', 'Lara', 'on', 'the', 'birth', 'of', 'their', 'son', ',', 'Eric', 'Luke', 'Trump', 'this']\n",
-      "Luke ('Trump', 'this')\n",
-      "['We', 'pledge', 'our', 'solidarity', 'with', 'France', 'against', 'terror', '.', 'It', 'was', 'a', 'great', 'honor', 'to', 'welcome', 'Prime', 'Minister', 'Najib', 'Abdul', 'Razak', 'of', 'Malaysia', 'and', 'his', 'distinguished', 'delegation', 'to', 'th', 'Congratulations', 'to', 'Eric', 'amp', ';', 'Lara', 'on', 'the', 'birth', 'of', 'their', 'son', ',', 'Eric', 'Luke', 'Trump', 'this', 'morning', '!']\n"
+      ". ('.', 'our')\n",
+      "['.', 'our', 'Great', 'American']\n",
+      "our ('Great', 'American')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or']\n",
+      "American ('Flag', 'or')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and']\n",
+      "or ('Country', 'and')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand']\n",
+      "and ('should', 'stand')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the']\n",
+      "stand ('for', 'the')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem']\n",
+      "the ('National', 'Anthem')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If']\n",
+      "Anthem ('.', 'If')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',']\n",
+      "If ('not', ',')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED']\n",
+      ", (\"YOU'RE\", 'FIRED')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find']\n",
+      "FIRED ('.', 'Find')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find', 'something', 'else']\n",
+      "Find ('something', 'else')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find', 'something', 'else', 'to', 'do']\n",
+      "else ('to', 'do')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find', 'something', 'else', 'to', 'do', '!', 'If']\n",
+      "do ('!', 'If')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find', 'something', 'else', 'to', 'do', '!', 'If', 'a', 'player']\n",
+      "If ('a', 'player')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find', 'something', 'else', 'to', 'do', '!', 'If', 'a', 'player', 'wants', 'the']\n",
+      "player ('wants', 'the')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find', 'something', 'else', 'to', 'do', '!', 'If', 'a', 'player', 'wants', 'the', 'privilege', 'of']\n",
+      "the ('privilege', 'of')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find', 'something', 'else', 'to', 'do', '!', 'If', 'a', 'player', 'wants', 'the', 'privilege', 'of', 'making', 'millions']\n",
+      "of ('making', 'millions')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find', 'something', 'else', 'to', 'do', '!', 'If', 'a', 'player', 'wants', 'the', 'privilege', 'of', 'making', 'millions', 'of', 'dollars']\n",
+      "millions ('of', 'dollars')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find', 'something', 'else', 'to', 'do', '!', 'If', 'a', 'player', 'wants', 'the', 'privilege', 'of', 'making', 'millions', 'of', 'dollars', 'in', 'the']\n",
+      "dollars ('in', 'the')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find', 'something', 'else', 'to', 'do', '!', 'If', 'a', 'player', 'wants', 'the', 'privilege', 'of', 'making', 'millions', 'of', 'dollars', 'in', 'the', 'NFL', ',']\n",
+      "the ('NFL', ',')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find', 'something', 'else', 'to', 'do', '!', 'If', 'a', 'player', 'wants', 'the', 'privilege', 'of', 'making', 'millions', 'of', 'dollars', 'in', 'the', 'NFL', ',', 'or', 'other']\n",
+      ", ('or', 'other')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find', 'something', 'else', 'to', 'do', '!', 'If', 'a', 'player', 'wants', 'the', 'privilege', 'of', 'making', 'millions', 'of', 'dollars', 'in', 'the', 'NFL', ',', 'or', 'other', 'leagues', ',']\n",
+      "other ('leagues', ',')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find', 'something', 'else', 'to', 'do', '!', 'If', 'a', 'player', 'wants', 'the', 'privilege', 'of', 'making', 'millions', 'of', 'dollars', 'in', 'the', 'NFL', ',', 'or', 'other', 'leagues', ',', 'he', 'or']\n",
+      ", ('he', 'or')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find', 'something', 'else', 'to', 'do', '!', 'If', 'a', 'player', 'wants', 'the', 'privilege', 'of', 'making', 'millions', 'of', 'dollars', 'in', 'the', 'NFL', ',', 'or', 'other', 'leagues', ',', 'he', 'or', 'she', 'should']\n",
+      "or ('she', 'should')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find', 'something', 'else', 'to', 'do', '!', 'If', 'a', 'player', 'wants', 'the', 'privilege', 'of', 'making', 'millions', 'of', 'dollars', 'in', 'the', 'NFL', ',', 'or', 'other', 'leagues', ',', 'he', 'or', 'she', 'should', 'not', 'be']\n",
+      "should ('not', 'be')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find', 'something', 'else', 'to', 'do', '!', 'If', 'a', 'player', 'wants', 'the', 'privilege', 'of', 'making', 'millions', 'of', 'dollars', 'in', 'the', 'NFL', ',', 'or', 'other', 'leagues', ',', 'he', 'or', 'she', 'should', 'not', 'be', 'allowed', 'to']\n",
+      "be ('allowed', 'to')\n",
+      "['.', 'our', 'Great', 'American', 'Flag', 'or', 'Country', 'and', 'should', 'stand', 'for', 'the', 'National', 'Anthem', '.', 'If', 'not', ',', \"YOU'RE\", 'FIRED', '.', 'Find', 'something', 'else', 'to', 'do', '!', 'If', 'a', 'player', 'wants', 'the', 'privilege', 'of', 'making', 'millions', 'of', 'dollars', 'in', 'the', 'NFL', ',', 'or', 'other', 'leagues', ',', 'he', 'or', 'she', 'should', 'not', 'be', 'allowed', 'to', 'disrespect', '.']\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'We pledge our solidarity with France against terror . It was a great honor to welcome Prime Minister Najib Abdul Razak of Malaysia and his distinguished delegation to th Congratulations to Eric amp ; Lara on the birth of their son , Eric Luke Trump this morning !'"
+       "\". our Great American Flag or Country and should stand for the National Anthem . If not , YOU'RE FIRED . Find something else to do ! If a player wants the privilege of making millions of dollars in the NFL , or other leagues , he or she should not be allowed to disrespect .\""
       ]
      },
-     "execution_count": 342,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
